--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "ultraordinaire",
     "private": true,
     "version": "0.0.0",
+    "homepage": "https://mat06mat.github.io/ultraordinaire",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -9,7 +10,7 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "react": "^18.3.1",
