--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist",
+        "postdeploy": "echo 'Deployment complete!'"
     },
     "dependencies": {
         "react": "^18.3.1",
