--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "postdeploy": "echo 'Deployment complete!'"
     },
     "dependencies": {
+        "motion": "^11.11.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-helmet-async": "^2.0.5",
